--- a/src/components/game/gameboard/GameBoard.module.css
+++ b/src/components/game/gameboard/GameBoard.module.css
@@ -29,6 +29,15 @@
   margin-bottom: 32px;
 }
 
+.game_table .buttons {
+  position: fixed;
+  z-index: 999;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  left: -150px;
+}
+
 .chat_button {
   color: #fff;
   cursor: pointer;
