--- a/src/components/game/underCard/UnderCard.module.css
+++ b/src/components/game/underCard/UnderCard.module.css
@@ -5,9 +5,7 @@
   bottom: -500px;
   left: 48%;
   transform: translateX(-50%);
-  background-color: #fff;
-  border-top-right-radius: 100%;
-  border-top-left-radius: 100%;
+  background-color: rgba(0,0,0,0);
 }
 
 .half_circle_up {
@@ -53,6 +51,7 @@
   transform: translate(-40%, 0) rotate(-15deg) translate(0, -45%);
   transition: transform 0.5s ease-out;
   border-radius: 1.25rem;
+  cursor: pointer;
 }
 
 .card_agree .card_content_agree p {
@@ -119,6 +118,7 @@
   transition: transform 0.5s ease-out;
   border-radius: 1.25rem;
   z-index: 2;
+  cursor: pointer;
 }
 
 .card_disagree:hover {
