--- a/src/components/game/explanation/Explanation.module.css
+++ b/src/components/game/explanation/Explanation.module.css
@@ -27,6 +27,7 @@
     bottom: 16px;
     right: 5px;
     width: 400px;
+    height: 500px;
     background-color: #fff;
     transition: all 0.5s;
     margin-right: -405px;
@@ -61,14 +62,41 @@
 
 .explain .progress {
     width: 100%;
+    height: 90%;
     padding: 10px 5px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.explain .progress svg {
+    width: 5%;
+    height: 20%;
+    cursor: pointer;
+}
+
+.rule {
+    width: 90%;
+    height: 100%;
+}
+
+.rule .rule_image {
+    height: 70%;
+    padding: 5px;
+    border: 1px solid black;
+}
+
+.rule .rule_text {
+    height: 30%;
+    padding: 5px;
+    border: 1px solid black;
 }
 
 @media (max-width: 410px) {
     .explain {
-        top: 10%;
+        top: 20%;
         width: 95%;
-        height: 80%;
+        height: 65%;
     }
 
     .explain .progress {
