--- a/src/components/mypage/MypageInfo.module.css
+++ b/src/components/mypage/MypageInfo.module.css
@@ -8,9 +8,44 @@
   padding-top: 3rem;
 }
 
+.container .sub_player {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-left: 20px;
+}
+
+.recent_games {
+  width: 1000px;
+  max-width: 95%;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  row-gap: 10px;
+  column-gap: 35px;
+  margin-bottom: 1rem;
+}
+
+@media (max-width: 1046px) {
+  .recent_games {
+    grid-template-columns: repeat(1, 1fr);
+    place-items: center;
+  }
+}
+
 @media (max-width: 976px) {
   .container {
     width: 100%;
     flex-direction: column;
+  }
+
+  .container .sub_player {
+    width: 100%;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 25px;
+    margin: 0;
   }
 }
