--- a/src/components/game/chatting/ChatWindow.module.css
+++ b/src/components/game/chatting/ChatWindow.module.css
@@ -42,12 +42,7 @@
   width: 100%;
   height: 400px;
   padding: 5px;
-  overflow: auto;
-}
-
-.chatting .chatting_message .enterRoom {
-  text-align: center;
-  color: crimson;
+  overflow-y: auto;
 }
 
 .chatting .chatting_message::-webkit-scrollbar {
