--- a/src/components/game/assets/Assets.module.css
+++ b/src/components/game/assets/Assets.module.css
@@ -14,3 +14,35 @@
   right: 0;
   transform: rotate(5deg);
 }
+
+@media (max-width: 684px) {
+  .crown {
+    width: 32px;
+    height: 32px;
+    top: -10px;
+    left: 5px;
+  }
+
+  .jury {
+    width: 32px;
+    height: 32px;
+    top: -10px;
+    right: 5px;
+  }
+}
+
+@media (max-width: 480px) {
+  .crown {
+    width: 24px;
+    height: 24px;
+    top: -10px;
+    left: 5px;
+  }
+
+  .jury {
+    width: 24px;
+    height: 24px;
+    top: -10px;
+    right: 5px;
+  }
+}
