--- a/src/components/game/avatar/Avatar.module.css
+++ b/src/components/game/avatar/Avatar.module.css
@@ -97,6 +97,35 @@
   .game_setting_inner
   .player
   .player_avatar_container
+  .player_user_ready_wrapper {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  letter-spacing: 1px;
+  overflow: hidden;
+}
+
+.game_setting
+  .game_setting_inner
+  .player
+  .player_avatar_container
+  .player_user_ready_wrapper
+  .player_user_ready {
+  font-size: 1.3rem;
+  color: #fff;
+  text-transform: uppercase;
+  animation: typewriter 0.5s steps(44) 1s 1 normal both,
+    blinkTextCursor 500ms infinite;
+}
+
+.game_setting
+  .game_setting_inner
+  .player
+  .player_avatar_container
   .player_avatar_avatar {
   width: 70%;
   height: 70%;
@@ -108,6 +137,25 @@
   background-repeat: no-repeat;
 }
 
+@keyframes typewriter {
+  from {
+    width: 0;
+  }
+
+  to {
+    width: 75px;
+  }
+}
+
+@keyframes blinkTextCursor {
+  from {
+    border-right-color: hsl(0, 0%, 80%);
+  }
+
+  to {
+    border-right-color: transparent;
+  }
+}
 @media (max-width: 684px) {
   .game_setting .game_setting_inner .player {
     width: 102px;
@@ -129,6 +177,15 @@
     .player_avatar_container
     .player_username_wrapper
     .player_username {
+    font-size: 0.8rem;
+  }
+
+  .game_setting
+    .game_setting_inner
+    .player
+    .player_avatar_container
+    .player_user_ready_wrapper
+    .player_user_ready {
     font-size: 0.8rem;
   }
 }
@@ -153,6 +210,15 @@
     .player_avatar_container
     .player_username_wrapper
     .player_username {
+    font-size: 0.6rem;
+  }
+
+  .game_setting
+    .game_setting_inner
+    .player
+    .player_avatar_container
+    .player_user_ready_wrapper
+    .player_user_ready {
     font-size: 0.6rem;
   }
 }
