--- a/src/components/game/avatar/Avatar.module.css
+++ b/src/components/game/avatar/Avatar.module.css
@@ -32,11 +32,7 @@
   border-radius: 50%;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar
-  .player_avatar_background {
+.game_setting .game_setting_inner .player .player_avatar .player_avatar_background {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -58,11 +54,7 @@
   transition: opacity 0.2s;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar_container
-  .player_username_wrapper {
+.game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
   width: 100%;
   height: 28px;
   position: absolute;
@@ -93,11 +85,7 @@
   white-space: nowrap;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar_container
-  .player_avatar_avatar {
+.game_setting .game_setting_inner .player .player_avatar_container .player_avatar_avatar {
   width: 70%;
   height: 70%;
   position: absolute;
@@ -114,11 +102,7 @@
     height: 102px;
   }
 
-  .game_setting
-    .game_setting_inner
-    .player
-    .player_avatar_container
-    .player_username_wrapper {
+  .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
     height: 22px;
     margin-bottom: -27px;
   }
@@ -138,11 +122,7 @@
     height: 76px;
   }
 
-  .game_setting
-    .game_setting_inner
-    .player
-    .player_avatar_container
-    .player_username_wrapper {
+  .game_setting .game_setting_inner .player .player_avatar_container .player_username_wrapper {
     height: 17px;
     margin-bottom: -18px;
   }
