--- a/src/components/game/rollCard/RollCard.module.css
+++ b/src/components/game/rollCard/RollCard.module.css
@@ -15,6 +15,11 @@
   position: relative;
 }
 
+.card_back .layer img {
+  width: 100%;
+  height: 100%;
+}
+
 .card_back .layer p {
   text-align: center;
   font-size: 1.2rem;
