--- a/src/components/game/logCard/LogCard.module.css
+++ b/src/components/game/logCard/LogCard.module.css
@@ -48,10 +48,10 @@
   margin: 0px 0px 10px 0px;
   position: relative;
   animation-name: flip;
-  animation-duration: 2s;
+  animation-duration: 1s;
 }
 
-img {
+.card img {
   width: 100%;
   height: 100%;
 }
