--- a/src/components/game/logCard/RoundToken.module.css
+++ b/src/components/game/logCard/RoundToken.module.css
@@ -15,7 +15,6 @@
   color: white;
 }
 
-
 .round_token_back {
   display: flex;
   position: absolute;
@@ -38,10 +37,13 @@
 }
 
 .round_token img {
+  width: 100%;
+  height: 100%;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  margin: 2px 0px 0px 0px;
 }
 
 @media (max-width: 684px) {
