--- a/src/components/game/rollCard/RollCard.module.css
+++ b/src/components/game/rollCard/RollCard.module.css
@@ -5,6 +5,9 @@
   transform: translate(-50%, -50%);
   height: 345px;
   width: 230px;
+
+  animation-name: flip;
+  animation-duration: 2s;
 }
 
 .card_back .layer {
@@ -43,5 +46,11 @@
   .card_back {
     width: 130px;
     height: 200px;
+  }
+}
+
+@keyframes flip {
+  from {
+    transform: rotateY(180deg);
   }
 }
