--- a/src/components/game/avatar/Avatar.module.css
+++ b/src/components/game/avatar/Avatar.module.css
@@ -85,11 +85,7 @@
   white-space: nowrap;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar_container
-  .player_user_ready_wrapper {
+.game_setting .game_setting_inner .player .player_avatar_container .player_user_ready_wrapper {
   position: absolute;
   top: 50%;
   left: 50%;
@@ -110,15 +106,11 @@
   font-size: 1.3rem;
   color: #fff;
   text-transform: uppercase;
-  animation: typewriter 0.5s steps(44) 1s 1 normal both,
-    blinkTextCursor 500ms infinite;
+  animation: typewriter steps(44) 1s 1 normal both,
+    /* animation: typewriter 0.5s steps(44) 1s 1 normal both, */ blinkTextCursor 500ms infinite;
 }
 
-.game_setting
-  .game_setting_inner
-  .player
-  .player_avatar_container
-  .player_avatar_avatar {
+.game_setting .game_setting_inner .player .player_avatar_container .player_avatar_avatar {
   width: 70%;
   height: 70%;
   position: absolute;
