--- a/src/components/game/result/gameResult/JobCardBack.module.css
+++ b/src/components/game/result/gameResult/JobCardBack.module.css
@@ -33,8 +33,29 @@
   position: absolute;
   top: 0;
   width: 100%;
+}
 
+.citizen {
+  position: relative;
+  width: 100%;
+  height: 100%;
   background-image: url("../../../../assets/images/image-citizen-card.png");
+  background-size: cover;
+}
+
+.killer {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../../../assets/images/image-killer-card.png");
+  background-size: cover;
+}
+
+.police {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  background-image: url("../../../../assets/images/image-police-card.png");
   background-size: cover;
 }
 
